--- a/_data/crates_generated.yaml
+++ b/_data/crates_generated.yaml
@@ -555,6 +555,22 @@
   - neural-networks
   - bindings
   github: google/tensorflow-rust
+- stargazers_count: 362
+  open_issues_count: 3
+  last_commit: '2016-07-28T19:56:04Z'
+  contributor_count: 7
+  description: A low-latency data-parallel dataflow system in Rust
+  repository: https://github.com/frankmcsherry/timely-dataflow.git
+  documentation: https://frankmcsherry.github.com/timely-dataflow
+  downloads: 1815
+  license: MIT
+  max_version: 0.1.15
+  created_at: '2015-05-29T13:28:08Z'
+  updated_at: '2016-06-07T14:18:56Z'
+  name: timely
+  topics:
+  - data-preprocessing
+  github: frankmcsherry/timely-dataflow
 - stargazers_count: 115
   open_issues_count: 1
   last_commit: '2016-07-01T20:41:12Z'
